discussion of urls earlier in chapter

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -38,15 +38,14 @@ By the end of the chapter, readers will be able to:
 - retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` package
 - use `write_csv` to save a data frame to a `.csv` file
 
-- (*optional*) obtain data using **a**pplication **p**rogramming **i**nterfaces (APIs) and web scraping
+- (*optional*) obtain data using **A**pplication **P**rogramming **I**nterfaces (APIs) and web scraping
     - read HTML source code from a URL using the `rvest` package
     - read data from the Twitter API using the `rtweet` package
     - compare downloading tabular data from a plain text file (e.g. `.csv`), accessing data from an API, and scraping the HTML source code from a website
 
 ## Absolute and relative file paths
 
-
-We will discuss the different functions we can use to import data into R, but before we can discuss *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
+In this chapter, we will discuss the different functions we can use to import data into R, but before we can talk about *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
 computer (*local*) or somewhere on the internet (*remote*). In this section, we will discuss the case where the file lives on your computer.
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
@@ -90,13 +89,13 @@ Even though Fatima and Jayden stored their files in the same place on their comp
 If Jayden has code that loads the `happiness_report.csv` data using an absolute path, the code won't work on Fatima's computer.
 But the relative path from inside the `project` folder (`data/happiness_report.csv`) is the same on both computers; any code that uses relative paths will work on both!
 
-We include a link to a short video on the difference between absolute and relative paths at the end of the chapter in the additional resources section.
+In the additional resources section, we include a link to a short video on the difference between absolute and relative paths. We also include a link to the `here` package, which is a robust method for finding file paths.  
 
 <!--Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root 
 folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name 
 on each computer) and where the files and folders happen to be located on that particular computer. -->
 
-
+Your file could be stored locally, as we discussed, or it could also be somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web address) indicates the location of a resource on the internet and helps us retrieve that resource. Next, we will discuss how to get both locally or remotely stored data into R. 
 
 ## Reading tabular data from a plain text file into R
 
@@ -276,7 +275,7 @@ canlang_data <- read_excel("data/can_lang.xlsx")
 canlang_data
 ```
 
-If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to specify the sheet number or name. You can also specify cell ranges using the `range` argument. This functionality is useful when a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets because multiple tables makes reading in data more difficult).
+If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to specify the sheet number or name. You can also specify cell ranges using the `range` argument. This functionality is useful when a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets since this makes reading in data more difficult).
 
 As with plain text files, you should always explore the data file before importing it into R. Exploring the data beforehand helps you decide which arguments you need to to load the data into R successfully. If you do not have the Excel program on your computer, you can use other programs to preview the file. Examples include Google Sheets and Libre Office. 
 
@@ -518,8 +517,8 @@ stored in a plaintext, spreadsheet-like format (e.g., comma- or tab-separated)
 from a web URL using one of the `read_*` functions from the `tidyverse`. But 
 as time goes on, it is increasingly uncommon to find
 data (especially large amounts of data) in this format available for download
-from a URL. Instead, websites now often offer something known as an **a**pplication
-**p**rogramming **i**nterface (API), which provides a programmatic way to ask
+from a URL. Instead, websites now often offer something known as an **A**pplication
+**P**rogramming **I**nterface (API), which provides a programmatic way to ask
 for subsets of a dataset. This allows the website owner to control *who* has access
 to the data, *what portion* of the data they have access to, and *how much* data they can access.
 Typically, the website owner will give you a *token* (a secret string
