added explanation of delimiter and updated intro paragraph a bit more

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -101,8 +101,8 @@ Your file could be stored locally, as we discussed, or it could also be somewher
 
 ### `read_csv` to read in comma-separated files
 
-Now that we have learned about *where* data could be, we will learn about *how* to import tabular data into R using various functions. Specifically, we will learn about reading tabular data from a plain text file (a document containing only text) into R and how to write tabular data to a file. The function we use will depend on the file's format. For example, the last chapter, we learned about using the `tidyverse` `read_csv` function when reading .csv files that match the expected defaults 
-(column names are present, and commas are used as the separator between columns). In this section, we will learn how to read 
+Now that we have learned about *where* data could be, we will learn about *how* to import data into R using various functions. Specifically, we will learn how to *read* tabular data from a plain text file (a document containing only text) into R and *write* tabular data to a file from R. The function we use to do this depends on the file's format. For example, the last chapter, we learned about using the `tidyverse` `read_csv` function when reading .csv (*c*omma-*s*eparated *v*alues) files. In that case, the separator or *delimiter* that divided our columns was a comma (`,`). We only learned the case where the data matched the expected defaults of the `read_csv` function 
+(column names are present, and commas are used as the delimiter between columns). In this section, we will learn how to read 
 files that do not satisfy the default expectations of `read_csv`.
 
 Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the more straightforward
@@ -911,4 +911,4 @@ data you are requesting and how frequently you are making requests.
 - If you read the subsection on obtaining data from the web via scraping and APIs, we provide two companion tutorial video links:
     - [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting the price and size data for apartment listings on CraigsList
     - [Another brief video tutorial](https://www.youtube.com/embed/O9HKbdhqYzk) on using the SelectorGadget tool to obtain desired CSS selectors for extracting Canadian city names and 2016 census populations from Wikipedia
-- The [polite package](https://cran.r-project.org/web/packages/polite/index.html) provides a set of tools for responsibly scraping data from websites. 
+- The [`polite` package](https://cran.r-project.org/web/packages/polite/index.html) provides a set of tools for responsibly scraping data from websites. 
