adding explanation of how many lines to skip

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -101,12 +101,26 @@ Your file could be stored locally, as we discussed, or it could also be somewher
 
 ### `read_csv` to read in comma-separated files
 
-Now that we have learned about *where* data could be, we will learn about *how* to import data into R using various functions. Specifically, we will learn how to *read* tabular data from a plain text file (a document containing only text) into R and *write* tabular data to a file from R. The function we use to do this depends on the file's format. For example, the last chapter, we learned about using the `tidyverse` `read_csv` function when reading .csv (*c*omma-*s*eparated *v*alues) files. In that case, the separator or *delimiter* that divided our columns was a comma (`,`). We only learned the case where the data matched the expected defaults of the `read_csv` function 
-(column names are present, and commas are used as the delimiter between columns). In this section, we will learn how to read 
+Now that we have learned about *where* data could be, we will learn about *how*
+to import data into R using various functions. Specifically, we will learn how 
+to *read* tabular data from a plain text file (a document containing only text)
+*into* R and *write* tabular data to a file *from* R. The function we use to do this
+depends on the file's format. For example, the last chapter, we learned about using
+the `tidyverse` `read_csv` function when reading .csv (*c*omma-*s*eparated *v*alues)
+files. In that case, the separator or *delimiter* that divided our columns was a
+comma (`,`). We only learned the case where the data matched the expected defaults 
+of the `read_csv` function 
+(column names are present, and commas are used as the delimiter between columns). 
+In this section, we will learn how to read 
 files that do not satisfy the default expectations of `read_csv`.
 
-Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the more straightforward
-case where the defaults hold, and the only argument we need to give to the function is the path to the file, `data/can_lang.csv`. The `can_lang` data set contains language data from the 2016 Canadian census. We put `data/` before the file's name when we are loading the data set because this data set is located in a sub-folder, named `data`, relative to where we are running our R code.
+Before we jump into the cases where the data aren't in the expected default format 
+for `tidyverse` and `read_csv`, let's revisit the more straightforward
+case where the defaults hold, and the only argument we need to give to the function
+is the path to the file, `data/can_lang.csv`. The `can_lang` data set contains 
+language data from the 2016 Canadian census. We put `data/` before the file's
+name when we are loading the data set because this data set is located in a
+sub-folder, named `data`, relative to where we are running our R code.
 
 Here is what the file would look like in a plain text editor:
 
@@ -163,7 +177,7 @@ our data is being read in.
 canlang_data
 ```
 
-To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3. How did we know to skip 3 lines? We looked at the data! Open your data in a text editor and look at the file to decide how many lines to skip. 
+To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3.
 
 ```{r}
 canlang_data <- read_csv("data/can_lang_meta-data.csv", 
@@ -171,6 +185,13 @@ canlang_data <- read_csv("data/can_lang_meta-data.csv",
 canlang_data
 ```
 
+How did we know to skip 3 lines? We looked at the data! The first three lines of the data had information we didn't need to import: 
+
+```{bash, echo=FALSE, comment=NA}
+head -n 3 data/can_lang_meta-data.csv
+```
+
+The column names began at line 4, so we skipped the first three lines. 
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
