adding example on tsv files

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -45,12 +45,11 @@ By the end of the chapter, readers will be able to:
 
 ## Absolute and relative file paths
 
-In this chapter, we will discuss the different functions we can use to import data into R, but before we can talk about *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
-computer (*local*) or somewhere on the internet (*remote*). In this section, we will discuss the case where the file lives on your computer.
+This chapter will discuss the different functions we can use to import data into R, but before we can talk about *how* we read the data into R with these functions, we first need to talk about *where* the data lives. When you load a data set into R, you first need to tell R where those files live. The file could live on your 
+computer (*local*) or somewhere on the internet (*remote*). 
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
-paths: relative paths and absolute paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the file that you're working in is). On the other hand, an absolute path is where the file is in respect to the base (or root) folder of 
-the computer's filesystem.
+paths: *relative* paths and *absolute* paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the file you're working in is). On the other hand, an absolute path is where the file is in respect to the computer's filesystem's base (or root) folder.
 
 Suppose our computer's filesystem looks like the picture in Figure \@ref(fig:file-system-for-export-to-intro-datascience), and we are working in a file titled `worksheet_02.ipynb`. If we want to 
 read in the `.csv` file named `happiness_report.csv` into R, we could do this using either a relative or an absolute path. 
@@ -74,7 +73,8 @@ happiness_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.cs
 
 So which one should you use? Generally speaking, to ensure your code can be run 
 on a different computer, you should use relative paths. An added bonus is that 
-it's also less typing! This is because the absolute path of a file (the names of 
+it's also less typing! Generally, you should use relative paths because the file's 
+absolute path (the names of 
 folders between the computer's root `/` and the file) isn't usually the same 
 across different computers. For example, suppose Fatima and Jayden are working on a 
 project together on the `happiness_report.csv` data. Fatima's file is stored at 
@@ -89,13 +89,13 @@ Even though Fatima and Jayden stored their files in the same place on their comp
 If Jayden has code that loads the `happiness_report.csv` data using an absolute path, the code won't work on Fatima's computer.
 But the relative path from inside the `project` folder (`data/happiness_report.csv`) is the same on both computers; any code that uses relative paths will work on both!
 
-In the additional resources section, we include a link to a short video on the difference between absolute and relative paths. We also include a link to the `here` package, which is a robust method for finding file paths.  
+In the additional resources section, we include a link to a short video on the difference between absolute and relative paths. You can also check out the `here` package, which provides methods for finding and constructing file paths in R.  
 
 <!--Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root 
 folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name 
 on each computer) and where the files and folders happen to be located on that particular computer. -->
 
-Your file could be stored locally, as we discussed, or it could also be somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web address) indicates the location of a resource on the internet and helps us retrieve that resource. Next, we will discuss how to get both locally or remotely stored data into R. 
+Your file could be stored locally, as we discussed, or it could also be somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web address) indicates the location of a resource on the internet and helps us retrieve that resource. Next, we will discuss how to get either locally or remotely stored data into R. 
 
 ## Reading tabular data from a plain text file into R
 
@@ -104,9 +104,9 @@ Your file could be stored locally, as we discussed, or it could also be somewher
 Now that we have learned about *where* data could be, we will learn about *how*
 to import data into R using various functions. Specifically, we will learn how 
 to *read* tabular data from a plain text file (a document containing only text)
-*into* R and *write* tabular data to a file *from* R. The function we use to do this
+*into* R and *write* tabular data to a file *out of* R. The function we use to do this
 depends on the file's format. For example, the last chapter, we learned about using
-the `tidyverse` `read_csv` function when reading .csv (*c*omma-*s*eparated *v*alues)
+the `tidyverse` `read_csv` function when reading .csv (**c**omma-**s**eparated **v**alues)
 files. In that case, the separator or *delimiter* that divided our columns was a
 comma (`,`). We only learned the case where the data matched the expected defaults 
 of the `read_csv` function 
@@ -123,7 +123,7 @@ name when we are loading the data set because this data set is located in a
 sub-folder, named `data`, relative to where we are running our R code.
 
 Here is what the file would look like in a plain text editor (a program that removes
-all formatting):
+all formatting, like bolding or different fonts):
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/can_lang.csv
@@ -194,6 +194,20 @@ head -n 3 data/can_lang_meta-data.csv
 
 The column names began at line 4, so we skipped the first three lines. 
 
+### `read_tsv` to read in tab-separated files
+
+Another common way data is stored is with tabs as the delimiter. Notice the data file, `can_lang_tab.tsv`, has tabs in between the columns instead of commas. 
+
+```{bash, echo=FALSE, comment=NA}
+head -n 10 data/can_lang_tab.tsv
+```
+
+To read in this type of data, we can use the `read_tsv` to read in .tsv (**t**ab **s**eparated **v**alues) files. 
+
+```{r 01-read-tab}
+canlang_data <- read_tsv("data/can_lang_tab.tsv")
+canlang_data
+```
 ### `read_delim` as a more flexible method to get tabular data into R
 
 When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same data set has no column names and uses tabs as the delimiter instead of commas. 
