added data and example with read_tsv, updated explanation for read_delim

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -99,7 +99,7 @@ Your file could be stored locally, as we discussed, or it could also be somewher
 
 ## Reading tabular data from a plain text file into R
 
-### `read_csv` to read in comma-separated files
+### `read_csv` to read in comma-separated files {#readcsv}
 
 Now that we have learned about *where* data could be, we will learn about *how*
 to import data into R using various functions. Specifically, we will learn how 
@@ -208,9 +208,12 @@ To read in this type of data, we can use the `read_tsv` to read in .tsv (**t**ab
 canlang_data <- read_tsv("data/can_lang_tab.tsv")
 canlang_data
 ```
+
+Let's compare the data frame here to the resulting data frame in section \@ref(readcsv) after using `read_csv`. Notice anything? They look the same! The same number of columns/rows and column names! So we needed to use different tools for the job depending on the file format and our resulting table (`canlang_data`) in both cases was the same! 
+
 ### `read_delim` as a more flexible method to get tabular data into R
 
-When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same data set has no column names and uses tabs as the delimiter instead of commas. 
+`read_csv` and `read_tsv` are actually just special cases of the more general `read_delim` function. We can use `read_delim` to import both comma and tab-separated files (and more), we just have to specify the delimiter. The `can_lang.tsv` is a different version of this same data set with no column names and uses tabs as the delimiter instead of commas. 
 
 Here is how the file would look in a plain text editor:
 
@@ -218,7 +221,7 @@ Here is how the file would look in a plain text editor:
 head -n 10 data/can_lang.tsv
 ```
 
-To get this into R using the `read_delim()` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). Both `read_csv()` and `read_delim()` have a `col_names` argument and the default is `TRUE`. 
+To get this into R using the `read_delim` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). Both `read_csv` and `read_delim` have a `col_names` argument and the default is `TRUE`. 
 
 > `\t` is an example of an *escape character*, typically used to represent nonprinting characters (like the tab) or characters with special meanings (such as quotation marks). 
 
@@ -245,7 +248,7 @@ canlang_data
 ```
 
 ### Reading tabular data directly from a URL
-We can also use `read_csv()` or `read_delim()` (and related functions) to read in tabular data directly from a **U**niform **R**esource **L**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv()` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
+We can also use `read_csv` or `read_delim` (and related functions) to read in tabular data directly from a **U**niform **R**esource **L**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
 canlang_data <- read_csv(
@@ -326,11 +329,11 @@ Table: (\#tab:read-table) Summary of `read_*` functions
 
 Data File Type | R Function | R Package
 -- | -- | --
-Comma (`,`) separated files | `read_csv()` | `readr`
-Tab (`\t`) separated files  | `read_tsv()` | `readr`
-Semicolon (`;`) separated files |  `read_csv2()` | `readr`
-Various formats (`.csv`, `.tsv`)   | `read_delim()` | `readr`
-Excel files (`.xlsx`) | `read_excel()` | `readxl`
+Comma (`,`) separated files | `read_csv` | `readr`
+Tab (`\t`) separated files  | `read_tsv` | `readr`
+Semicolon (`;`) separated files |  `read_csv2` | `readr`
+Various formats (`.csv`, `.tsv`)   | `read_delim` | `readr`
+Excel files (`.xlsx`) | `read_excel` | `readxl`
 
 > Note: `readr` is a part of the `tidyverse` package so we did not need to load this package separately since we loaded `tidyverse`.
 
