--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -221,9 +221,9 @@ Here is how the file would look in a plain text editor:
 head -n 10 data/can_lang.tsv
 ```
 
-To get this into R using the `read_delim` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). Both `read_csv` and `read_delim` have a `col_names` argument and the default is `TRUE`. 
+To get this into R using the `read_delim` function, we specify the first argument as the path to the file (as done with `read_csv`), and then provide values to the `delim` argument (here a tab, which we represent by `"\t"`) and the `col_names` argument (here we specify that there are no column names to assign, and give it the value of `FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument and the default is `TRUE`. 
 
-> `\t` is an example of an *escape character*, typically used to represent nonprinting characters (like the tab) or characters with special meanings (such as quotation marks). 
+> `\t` is an example of an *escape character*, typically used to represent non-printing characters (like the tab) or characters with special meanings (such as quotation marks). 
 
 ```{r}
 canlang_data <- read_delim("data/can_lang.tsv", 
@@ -232,9 +232,11 @@ canlang_data <- read_delim("data/can_lang.tsv",
 canlang_data
 ```
 
-Data frames in R need to have column names, thus if you read data into R as a data frame without column names then R assigns column names for them. If you used the `read_*` functions (e.g. `read_csv`, `read_delim` etc.) to read the data into R, then R gives each column a name of `X1, X2, ..., XN`, where N is the number of columns in the data set.
 
-It is best to rename your columns to help differentiate between them (e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as you code). To rename your columns, you can use the `rename` function from the `dplyr` package, one of the packages loaded with `tidyverse`, so we don't need to load it separately. The first argument is the data set, and in the subsequent arguments you write `new_name = old_name` for the selected variables to rename. We rename the `X1, X2, ..., X6` columns in the `canlang_data` data frame to more descriptive names below. 
+Data frames in R need to have column names.  Thus if you read in data that 
+don't have column names, R will assign names automatically. In the example above, R assigns each column a name of `X1, X2, X3, X4, X5, X6`.
+
+It is best to rename your columns to help differentiate between them (e.g. `X1, X2`, etc., are not very descriptive names and will make it more confusing as you code). To rename your columns, you can use the `rename` function from the `dplyr` package (one of the packages loaded with `tidyverse`, so we don't need to load it separately). The first argument is the data set, and in the subsequent arguments you write `new_name = old_name` for the selected variables to rename. We rename the `X1, X2, ..., X6` columns in the `canlang_data` data frame to more descriptive names below. 
 
 ```{r 01-rename-columns}
 canlang_data <- rename(canlang_data,
@@ -248,7 +250,12 @@ canlang_data
 ```
 
 ### Reading tabular data directly from a URL
-We can also use `read_csv` or `read_delim` (and related functions) to read in tabular data directly from a **U**niform **R**esource **L**ocator (URL) that contains tabular data. In this case, we provide the URL to `read_csv` as the path to the file instead of a path to a local file on our computer. Similar to when we specify a path on our local computer, here we need to surround the URL by quotes. All other arguments that we use are the same as when using these functions with a local file on our computer.
+We can also use `read_csv`, `read_tsv` or `read_delim` (and related functions)
+to read in data directly from a **U**niform **R**esource **L**ocator (URL) that 
+contains tabular data. Here, we provide the URL to `read_*` as the path to the file
+instead of a path to a local file on our computer. We need to surround the URL with
+quotes similar to when we specify a path on our local computer. All other arguments
+that we use are the same as when using these functions with a local file on our computer.
 
 ```{r}
 canlang_data <- read_csv(
@@ -259,8 +266,8 @@ canlang_data
 
 ### Previewing a data file before reading it into R
 
-In all the examples above, we gave you previews of the data file before we read it into R. This is essential so that you can see whether or not there are column names, what the 
-delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. You can preview files in a plain text editor by right clicking on the file, selecting "Open With" and choosing a plain text editor (e.g Notepad etc.). 
+In all the examples above, we gave you previews of the data file before we read it into R. Previewing data is essential to see whether or not there are column names, what the 
+delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. You can preview files in a plain text editor by right-clicking on the file, selecting "Open With," and choosing a plain text editor (e.g. Notepad). 
 
 
 ## Reading tabular data from a Microsoft Excel file
