--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -328,8 +328,7 @@ If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to
 
 As with plain text files, you should always explore the data file before importing it into R. Exploring the data beforehand helps you decide which arguments you need to to load the data into R successfully. If you do not have the Excel program on your computer, you can use other programs to preview the file. Examples include Google Sheets and Libre Office. 
 
-In Table \@ref(tab:read-table) we summarize the `read_*` functions we covered in this chapter. We also include the `read_csv2` function for data separated by semicolons `;`. 
-
+In Table \@ref(tab:read-table) we summarize the `read_*` functions we covered in this chapter. We also include the `read_csv2` function for data separated by semicolons `;`, which you may run into with data sets where the decimal is represented by a comma instead of a period (as with some data sets from European countries).
 
 
 Table: (\#tab:read-table) Summary of `read_*` functions
